# uira

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  FEATURE_GAP_ANALYSIS.md  PHASE2_TEST_PLAN.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PLAN.md  PR_REVIEW_REPORT.md  README.md  REFACTOR_COMPLETE.md  SPAWN_AGENT_TEST_RESULTS.md  TUI_IMPROVEMENTS.md  _typos.toml  ai-todolist.md  astrape.yml  bunfig.toml  package.json  test_markdown.md  test_markdown.rs  todo-improvements.md  uira.yml  verify_improvements.sh
crates/astrape/: Cargo.toml
crates/astrape-agents/: Cargo.toml
crates/astrape-agents/src/: config.rs  definitions.rs  lib.rs  prompt_loader.rs  registry.rs  tier_builder.rs  tool_restrictions.rs  types.rs
crates/astrape-agents/tests/: agents_integration.rs
crates/astrape-claude/: Cargo.toml
crates/astrape-claude/src/: install.rs  lib.rs  protocol.rs  settings.rs  shell.rs
crates/astrape-comment-checker/: Cargo.toml
crates/astrape-comment-checker/src/: detector.rs  languages.rs  lib.rs  main.rs
crates/astrape-comment-checker/tests/: integration_test.rs
crates/astrape-config/: Cargo.toml
crates/astrape-config/src/: lib.rs  loader.rs  schema.rs
crates/astrape-core/: Cargo.toml
crates/astrape-core/src/: event.rs  lib.rs  result.rs  types.rs
crates/astrape-features/: Cargo.toml
crates/astrape-features/src/: background_agent.rs  context_injector.rs  lib.rs  notepad_wisdom.rs
crates/astrape-features/src/astrape_state/: constants.rs  mod.rs  storage.rs  types.rs
crates/astrape-features/src/builtin_skills/: mod.rs
crates/astrape-features/src/delegation_categories/: mod.rs  types.rs
crates/astrape-features/src/model_routing/: router.rs  rules.rs  signals.rs  types.rs
crates/astrape-features/src/state_manager/: mod.rs  types.rs
crates/astrape-features/src/task_decomposer/: mod.rs  types.rs
crates/astrape-features/src/verification/: mod.rs
crates/astrape-goals/: Cargo.toml
crates/astrape-goals/src/: lib.rs
crates/astrape-hook/: Cargo.toml
crates/astrape-hook/src/: executor.rs  keyword.rs  lib.rs  matcher.rs
crates/astrape-hooks/: Cargo.toml
crates/astrape-hooks/src/: hook.rs  lib.rs  registry.rs  types.rs
crates/astrape-hooks/src/hooks/: agent_usage_reminder.rs  astrape_orchestrator.rs  auto_slash_command.rs  autopilot.rs  background_notification.rs  circuit_breaker.rs  comment_checker.rs  directory_readme_injector.rs  empty_message_sanitizer.rs  keyword_detector.rs  learner.rs  mod.rs  non_interactive_env.rs  notepad.rs  omc_orchestrator.rs  orchestrator_constants.rs  persistent_mode.rs  plugin_patterns.rs  preemptive_compaction.rs  ralph.rs  recovery.rs  rules_injector.rs  think_mode.rs  thinking_block_validator.rs  todo_continuation.rs  ultrapilot.rs  ultraqa.rs  ultrawork.rs
crates/astrape-hooks/tests/: integration_test.rs
crates/astrape-keywords/: Cargo.toml
crates/astrape-keywords/src/: keyword.rs  lib.rs
crates/astrape-mcp/: Cargo.toml
crates/astrape-mcp-server/: Cargo.toml
crates/astrape-mcp-server/src/: anthropic_client.rs  auth.rs  main.rs  opencode_client.rs  opencode_server.rs  proxy_manager.rs  tools.rs
crates/astrape-mcp-server/src/providers/: gemini.rs  mod.rs  openai.rs
crates/astrape-mcp/src/: client.rs  lib.rs  registry.rs  types.rs
crates/astrape-napi/: Cargo.toml  package.json
crates/astrape-napi/scripts/: sync-agent-descriptions.cjs  sync-plugin.cjs
crates/astrape-napi/src/: lib.rs
crates/astrape-oxc/: Cargo.toml
crates/astrape-oxc/src/: lib.rs  linter.rs  minifier.rs  parser.rs  transformer.rs
crates/astrape-prompts/: Cargo.toml
crates/astrape-prompts/src/: builder.rs  lib.rs  sections.rs  types.rs
crates/astrape-proxy/: Cargo.toml  E2E_TEST.md  README.md
crates/astrape-proxy/src/: auth.rs  config.rs  lib.rs  main.rs  server.rs  streaming.rs  translation.rs  types.rs
crates/astrape-proxy/tests/: integration_test.rs
crates/astrape-tools/: Cargo.toml
crates/astrape-tools/src/: background_task.rs  delegate_task.rs  lib.rs  registry.rs  session_manager.rs  skill.rs  types.rs
crates/astrape-tools/src/ast_grep/: mod.rs  tools.rs
crates/astrape-tools/src/lsp/: client.rs  mod.rs  servers.rs
crates/astrape/src/: config.rs  main.rs
crates/astrape/src/hooks/: mod.rs
crates/astrape/src/typos/: mod.rs
crates/uira-agent/: Cargo.toml
crates/uira-agent/src/: agent.rs  approval.rs  config.rs  continuation.rs  control.rs  error.rs  event_system.rs  events.rs  executor.rs  goals.rs  lib.rs  ralph.rs  rollout.rs  session.rs  session_state.rs  streaming.rs  todo_continuation.rs  turn.rs
crates/uira-agent/src/context/: compact.rs  error.rs  history.rs  manager.rs  mod.rs  monitor.rs
crates/uira-agent/src/telemetry/: metrics.rs  spans.rs  subscriber.rs
crates/uira-agent/tests/: integration.rs  mock_client.rs  rollout_test.rs  session_test.rs  streaming_test.rs
crates/uira-agents/: Cargo.toml
crates/uira-agents/src/: config.rs  definitions.rs  lib.rs  models.rs  prompt_loader.rs  prompts.rs  registry.rs  tier_builder.rs  tool_restrictions.rs  types.rs
crates/uira-agents/tests/: agents_integration.rs
crates/uira-auth/: Cargo.toml
crates/uira-auth-providers/: Cargo.toml
crates/uira-auth-providers/src/: anthropic.rs  google.rs  lib.rs  openai.rs
crates/uira-auth/src/: device_flow.rs  lib.rs  oauth_server.rs  pkce.rs  storage.rs  traits.rs  types.rs
crates/uira-channels/: Cargo.toml
crates/uira-channels/src/: lib.rs
crates/uira-cli/: Cargo.toml
crates/uira-cli/src/: commands.rs  config.rs  lib.rs  main.rs  rpc.rs  session.rs
crates/uira-commit-hook-cli/: Cargo.toml
crates/uira-commit-hook-cli/src/: config.rs  main.rs
crates/uira-config/: Cargo.toml
crates/uira-config/src/: lib.rs  loader.rs  schema.rs
crates/uira-context/: Cargo.toml
crates/uira-context/src/: compact.rs  history.rs  lib.rs  manager.rs  monitor.rs  truncate.rs
crates/uira-core/: Cargo.toml
crates/uira-core/src/: atomic_write.rs  event.rs  lib.rs
crates/uira-core/src/config/: mod.rs  (+2 more)
crates/uira-events/: Cargo.toml
crates/uira-events/src/: compat.rs  events.rs  lib.rs  runner.rs
(+583 files in other folders)
