[workspace]
resolver = "2"
members = [
  "crates/uira",
  "crates/uira-core",
  "crates/uira-napi",
  "crates/uira-sdk",
  "crates/uira-comment-checker",
  "crates/uira-hooks",
  "crates/uira-features",
  "crates/uira-agents",
  "crates/uira-tools",
  "crates/uira-config",
  "crates/uira-mcp-client",
  "crates/uira-mcp-server",
  "crates/uira-oxc",
  "crates/uira-goals",
# New agent harness crates
"crates/uira-protocol",
"crates/uira-providers",
"crates/uira-sandbox",
"crates/uira-context",
"crates/uira-agent",
"crates/uira-events",
"crates/uira-permissions",
"crates/uira-telemetry",
    "crates/uira-cli",
    "crates/uira-tui",
    "crates/uira-auth",
]
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Junho Yeo <i@junho.io>"]
license = "MIT"
repository = "https://github.com/junhoyeo/uira"

[workspace.dependencies]
# Internal crates - Core
uira-core = { path = "crates/uira-core" }
uira-protocol = { path = "crates/uira-protocol" }
uira-config = { path = "crates/uira-config" }

# Internal crates - Features
uira-agents = { path = "crates/uira-agents" }
uira-features = { path = "crates/uira-features" }
uira-hooks = { path = "crates/uira-hooks" }
uira-goals = { path = "crates/uira-goals" }
uira-sdk = { path = "crates/uira-sdk" }

# Internal crates - Tools
uira-tools = { path = "crates/uira-tools" }
uira-mcp-client = { path = "crates/uira-mcp-client" }
uira-oxc = { path = "crates/uira-oxc" }
uira-comment-checker = { path = "crates/uira-comment-checker" }

# Internal crates - Agent harness
uira-providers = { path = "crates/uira-providers" }
uira-sandbox = { path = "crates/uira-sandbox" }
uira-context = { path = "crates/uira-context" }
uira-agent = { path = "crates/uira-agent" }
uira-auth = { path = "crates/uira-auth" }
uira-events = { path = "crates/uira-events" }
uira-permissions = { path = "crates/uira-permissions" }
uira-telemetry = { path = "crates/uira-telemetry" }

# Internal crates - Applications
uira-cli = { path = "crates/uira-cli" }
uira-tui = { path = "crates/uira-tui" }
uira-mcp-server = { path = "crates/uira-mcp-server" }
uira-napi = { path = "crates/uira-napi" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
json5 = "0.4"

# HTTP
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }

# HTTP server framework (Actix Web)
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"

# Async utilities
async-stream = "0.3"
futures = "0.3"

# Parallel execution
rayon = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Terminal output
colored = "2.1"

# OXC - Native JS/TS toolchain
oxc = { version = "0.110", features = ["full"] }

# TOML for config
toml = "0.8"

# Regex for keyword detection
regex = "1.12"

# Glob pattern matching
globset = "0.4"

# Directories
dirs = "5.0"

# Time/Date
chrono = { version = "0.4", features = ["serde"] }

# Testing
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
