[workspace]
resolver = "2"
members = [
  "crates/uira-commit-hook-cli",
  "crates/uira-orchestration",
  "crates/uira-comment-checker",
  "crates/uira-core",
  "crates/uira-mcp-client",
  "crates/uira-mcp-server",
  "crates/uira-oxc",
  "crates/uira-providers",
  "crates/uira-security",
  "crates/uira-agent",
  "crates/uira-cli",
  "crates/uira-tui",
  "crates/uira-gateway",
  "crates/uira-memory",
]
[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Junho Yeo <i@junho.io>"]
license = "MIT"
repository = "https://github.com/junhoyeo/uira"

[workspace.dependencies]
# Internal crates - Core
uira-core = { path = "crates/uira-core", version = "0.1.1" }

# Internal crates - Features
uira-orchestration = { path = "crates/uira-orchestration", version = "0.1.1" }

# Internal crates - Tools
uira-mcp-client = { path = "crates/uira-mcp-client", version = "0.1.1" }
uira-oxc = { path = "crates/uira-oxc", version = "0.1.1" }
uira-comment-checker = { path = "crates/uira-comment-checker", version = "0.1.1" }

# Internal crates - Agent harness
uira-providers = { path = "crates/uira-providers", version = "0.1.1" }
uira-security = { path = "crates/uira-security", version = "0.1.1" }
uira-agent = { path = "crates/uira-agent", version = "0.1.1" }

# Internal crates - Applications
uira-cli = { path = "crates/uira-cli", version = "0.1.1" }
uira-tui = { path = "crates/uira-tui", version = "0.1.1" }
uira-mcp-server = { path = "crates/uira-mcp-server", version = "0.1.1" }

# Internal crates - Expansion (gateway, channels, skills)
uira-gateway = { path = "crates/uira-gateway", version = "0.1.1" }

# Internal crates - Memory
uira-memory = { path = "crates/uira-memory", version = "0.1.1" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
json5 = "0.4"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "stream", "rustls-tls"] }

# HTTP server framework (Actix Web)
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"

# Web framework (for gateway)
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.26"

# Telegram bot framework
teloxide = { version = "0.13", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }

# Discord bot framework
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "http", "utils", "collector", "rustls_backend"] }

# Async utilities
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"

# Parallel execution
rayon = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Terminal output
colored = "2.1"

# OXC - Native JS/TS toolchain
oxc = { version = "0.110", features = ["full"] }

# TOML for config
toml = "0.8"

# Regex for keyword detection
regex = "1.12"

# Glob pattern matching
globset = "0.4"

# Directories
dirs = "5.0"

# Time/Date
chrono = { version = "0.4", features = ["serde"] }

# Testing
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
