[package]
name = "astrape-claude"
description = "Claude Code integration for Astrape AI harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
astrape-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
