[package]
name = "astrape-comment-checker"
description = "Comment detection using tree-sitter - Rust port of go-claude-code-comment-checker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }

# Regex for pattern matching
regex = "1"
once_cell = "1"

# Tree-sitter for parsing
tree-sitter = "0.24"
streaming-iterator = "0.1"

# Language grammars (add as needed)
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-html = "0.23.2"
# Incompatible parsers (use tree-sitter < 0.24):
# tree-sitter-swift = "0.7.1"
# tree-sitter-kotlin = "0.3.8"
# tree-sitter-yaml = "0.7.2"
# tree-sitter-toml = "0.20.0"
# tree-sitter-vue = "0.0.3"
# tree-sitter-svelte = "0.10.2"
# tree-sitter-sql = "0.0.2"
# tree-sitter-lua = "0.4.1"

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "comment-checker"
path = "src/main.rs"
