[package]
name = "astrape-comment-checker"
description = "Comment detection using tree-sitter - Rust port of go-claude-code-comment-checker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }

# Regex for pattern matching
regex = "1"
once_cell = "1"

tree-sitter = "0.25"
streaming-iterator = "0.1"

tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript-codemod = "0.25.0-codemod.1"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-json = "0.24"
tree-sitter-scala = "0.24"
tree-sitter-haskell = "0.23"
tree-sitter-ocaml = "0.24"

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "comment-checker"
path = "src/main.rs"
