[package]
name = "astrape-features"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
astrape-sdk = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
