[package]
name = "astrape-features"
description = "Feature modules for Astrape - state management, session lifecycle, and advanced workflows"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
astrape-hooks = { path = "../astrape-hooks" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async runtime
tokio = { workspace = true }

# For thread-safe state
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
