[package]
name = "astrape-goals"
description = "Score-based verification goals for Astrape agent loops"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
astrape-config = { path = "../astrape-config" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

tokio = { version = "1", features = ["process", "time", "sync", "macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
