[package]
name = "astrape-hook"
description = "Hook execution engine with keyword detection for Astrape"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
astrape-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
