[package]
name = "astrape-hooks"
description = "Hook system foundation for Astrape - async trait-based hook registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
regex = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
