[package]
name = "astrape-mcp-server"
description = "MCP server exposing LSP and AST-grep tools for Claude Code"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "astrape-mcp"
path = "src/main.rs"

[dependencies]
astrape-tools = { path = "../astrape-tools" }
astrape-oxc = { path = "../astrape-oxc" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

ast-grep-core = "0.40"
ast-grep-language = "0.40"
glob = "0.3"
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
which = "7"


