[package]
name = "astrape-mcp"
description = "MCP (Model Context Protocol) types and integrations for Astrape"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
