[package]
name = "astrape-napi"
description = "Native Node.js bindings for Astrape AI harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
astrape-core = { workspace = true }
astrape-hook = { workspace = true }
astrape-hooks = { workspace = true }
astrape-agents = { workspace = true }
astrape-features = { workspace = true }
astrape-sdk = { workspace = true }
napi = { version = "3", features = ["serde-json", "tokio_rt", "async"] }
napi-derive = "3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
napi-build = "2"
