[package]
name = "astrape-oxc"
description = "OXC-powered JavaScript/TypeScript tools for Astrape"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
oxc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = "3"
