[package]
name = "astrape"
description = "Lightning-fast Rust-native git hooks manager with AI harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["git", "hooks", "oxc", "linter", "ai", "claude", "opencode"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
astrape-core = { workspace = true }
astrape-hook = { workspace = true }
astrape-claude = { workspace = true }
astrape-sdk = { workspace = true }
astrape-agents = { workspace = true }
astrape-features = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
colored = { workspace = true }
console = { workspace = true }
rayon = { workspace = true }
globset = { workspace = true }
git2 = { workspace = true }
oxc = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }

[[bin]]
name = "astrape"
path = "src/main.rs"
