[package]
name = "astrape"
description = "Lightning-fast Rust-native git hooks manager with AI harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["git", "hooks", "oxc", "linter", "ai", "claude", "opencode"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
astrape-core = { workspace = true }
astrape-keywords = { workspace = true }
astrape-claude = { workspace = true }
astrape-sdk = { workspace = true }
astrape-agents = { workspace = true }
astrape-features = { workspace = true }
astrape-config = { path = "../astrape-config" }
astrape-goals = { path = "../astrape-goals" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
colored = { workspace = true }
rayon = { workspace = true }
oxc = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }

[[bin]]
name = "astrape"
path = "src/main.rs"
