[package]
name = "uira-agent"
description = "Core agent loop with state machine, session persistence (JSONL sessions), and streaming for Uira agent harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
otlp = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tonic", "tracing-opentelemetry"]

[dependencies]
uira-types = { workspace = true }
uira-providers = { workspace = true }
uira-sandbox = { workspace = true }
uira-orchestration = { workspace = true }
uira-core = { workspace = true }
uira-hooks = { workspace = true }
uira-permissions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
futures = { workspace = true }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
indexmap = { version = "2", features = ["serde"] }
chrono = { workspace = true }
dirs = { workspace = true }
opentelemetry = { version = "0.21", optional = true }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.14", optional = true }
tonic = { version = "0.10", optional = true }
tracing-opentelemetry = { version = "0.22", optional = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
uuid = { version = "1", features = ["v4"] }
futures = { workspace = true }
chrono = { workspace = true }
