[package]
name = "uira-auth"
description = "Authentication infrastructure for Uira AI harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { workspace = true, features = ["json"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async trait support
async-trait = "0.1"

# URL parsing
url = "2.5"

# UUID for state generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Cryptography
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"

# Secret management
secrecy = { version = "0.8", features = ["serde"] }

# Time handling
chrono = { workspace = true }

# Directories
dirs = { workspace = true }

# File locking for concurrent access safety
fs2 = "0.4"

uira-core = { workspace = true }

# HTTP server for OAuth callbacks
actix-web = { workspace = true, optional = true }
actix-rt = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"

[features]
default = ["oauth-server"]
oauth-server = ["actix-web", "actix-rt"]
