[package]
name = "uira-cli"
description = "Command-line interface with session management and multi-provider support for Uira agent harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "uira-agent"
path = "src/main.rs"

[dependencies]
uira-protocol = { workspace = true }
uira-agent = { workspace = true }
uira-agents = { path = "../uira-agents" }
uira-config = { workspace = true }
uira-providers = { workspace = true }
uira-sandbox = { workspace = true }
uira-features = { path = "../uira-features" }
uira-goals = { path = "../uira-goals" }
uira-tui = { path = "../uira-tui" }
uira-auth = { path = "../uira-auth", features = ["oauth-server"] }
secrecy = "0.10"
webbrowser = "1.0"
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = { workspace = true }
crossterm = "0.28"
ratatui = "0.29"

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
