[package]
name = "uira-cli"
description = "Command-line interface with session management and multi-provider support for Uira agent harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "uira-agent"
path = "src/main.rs"

[dependencies]
uira-types = { workspace = true }
uira-agent = { workspace = true }
uira-core = { workspace = true }
uira-providers = { workspace = true, features = ["oauth-server"] }
uira-mcp-client = { workspace = true }
uira-sandbox = { workspace = true }
uira-orchestration = { workspace = true }
uira-hooks = { workspace = true }
uira-tui = { workspace = true }
uira-gateway = { workspace = true }
secrecy = "0.10"
webbrowser = "1.0"
clap = { workspace = true }
clap_complete = "4.5"
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = { workspace = true }
crossterm = "0.28"
ratatui = "0.29"

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
